# Realmfall-devtools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildRanks.bat  buildRanks.sh  character_builder.c  character_builder.h  devkit.c  ranked_builder.c  ranked_builder.h  rfcharacters.h
.github/workflows/: cmake-multi-platform.yml
